src/test/ui/parser/raw/raw_string.stderr
error[E0748]: unterminated raw string
  --> $DIR/raw_string.rs:2:13
   |
LL |     let x = r##"lol"#;
   |             ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"##`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0748`.
